--- a/src/container/product/UI/styles.css
+++ b/src/container/product/UI/styles.css
@@ -15,10 +15,19 @@
 
 .modal__content {
     width: 40%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .modal__item {
     padding: 20px 50px;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+
+.modal__wrapper {
     display: flex;
     justify-content: center;
     gap: 50px;
@@ -37,22 +46,22 @@
 }
 
 .modal__button {
-    width: 120px;
+    width: 100%;
     background-color: #583B5F;
     border-radius: 10px;
     color: #fff;
-    padding: 10px 0;
+    padding: 13px 0;
     font-size: 16px;
     text-transform: uppercase;
     font-weight: 600;
     transition-duration: .25s;
-    margin-bottom: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
     outline: none;
     border: none;
     cursor: pointer;
+    margin-bottom: 7px;
 }
 
 .modal__button:hover {
@@ -91,22 +100,28 @@
     color: #000000;
 }
 
+.modal__desc-title {
+    font-size: 24px;
+    font-weight: 700;
+}
+
 .modal__desc {
-    margin-top: 30px;
-    max-height: 400px;
+    margin-top: -45px;
     line-height: 2;
     font-size: 14px;
-    overflow: hidden;
-    -webkit-mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1.0) 0%, transparent 100%);
-    mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1.0) 0%, transparent 100%);
-}
-
-.modal__desc .title {
-    margin: 0;
-}
-
-.title {
-    font-weight: 700;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: start;
+    -ms-flex-align: start;
+    align-items: flex-start;
+    overflow-wrap: break-word;
+    white-space: pre-line;
+    word-break: break-word;
 }
 
 .showed {
@@ -136,10 +151,11 @@
 }
 
 .modal__pagination {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    width: 100%;
+    display: flex;
     align-items: center;
-    grid-gap: 33px;
+    justify-content: space-around;
+    gap: 30px;
     margin-top: 20px;
 }
 
@@ -167,6 +183,7 @@
     background-size: contain;
     width: 500px;
     border-radius: 10px;
+    cursor: zoom-in;
     transition-duration: .25s;
 }
 
