--- a/src/pages/UI/Notfound.css
+++ b/src/pages/UI/Notfound.css
@@ -1,17 +1,116 @@
-.content {
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    font-size: 20px;
-}
-h1 {
-    font-size: 98px;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&display=swap');
+
+body {
+    margin: 0;
+    padding: 0;
+    background: #261F28;
+    font-family: "Montserrat", sans-serif !important;
+    color: #fff;
 }
 
-.link {
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+
+html {
+    scroll-behavior: smooth;
+    overflow-x: hidden !important;
+}
+
+input,
+textarea,
+button {
+    font-family: "Montserrat", sans-serif;
+    outline: none;
+}
+
+ul {
+    list-style: none;
+}
+
+a,
+button {
+    text-decoration: none;
+    outline: none;
+    cursor: pointer;
+}
+
+img,
+svg {
+    max-width: 100%;
+    height: auto;
+}
+
+main {
+    overflow: hidden;
+}
+
+:root {
+    --ghost: #528cce;
+    --heading: #e7ebf2;
+}
+
+.content {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    justify-content: center;
+    text-align: center;
+}
+
+.content h1 {
+    color: var(--heading);
+    font-size: 12.5rem;
+    letter-spacing: 0.10em;
+    margin: 0.025em 0;
+    text-shadow: 0.05em 0.05em 0 rgba(0, 0, 0, 0.25);
+    white-space: nowrap;
+}
+
+.content h1>span {
+    animation: spooky 2s alternate infinite linear;
+    color: var(--ghost);
+    display: inline-block;
+}
+
+.content h2 {
+    margin-top: 15px;
+    color: var(--heading);
+    font-size: 20px;
+}
+
+.content p {
+    color: #ccc;
+    margin: 0;
+    margin-bottom: 45px;
+    font-size: 19px;
+}
+
+.home__link {
+    background: #4f3456;
+    padding: 15px 35px;
+    text-transform: uppercase;
+    font-weight: 600;
     color: #fff;
-    text-decoration: underline;
-    margin-top: 35px;
+    border-radius: 30px;
+    font-size: 16px;
+}
+
+@media (max-width: 30rem) {
+    h1 {
+        font-size: 8.5rem;
+    }
+}
+
+@keyframes spooky {
+    from {
+        transform: translateY(0.15em) scaleY(0.95);
+    }
+
+    to {
+        transform: translateY(-0.15em);
+    }
 }
