--- a/src/pages/UI/RegisterPage.css
+++ b/src/pages/UI/RegisterPage.css
@@ -8,8 +8,8 @@ input:-webkit-autofill:focus {
 }
 
 .register {
-    padding: 100px 0;
-    height: auto;
+    margin-top: 2rem;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -26,11 +26,12 @@ input:-webkit-autofill:focus {
 .register__content {
     display: flex;
     border: 3px solid #583B5F;
+    overflow: hidden;
 }
 
 .register__img {
-    width: 610px;
-    height: 600px;
+    width: 575px;
+    height: 550px;
 }
 
 .register__back {
@@ -55,7 +56,7 @@ input:-webkit-autofill:focus {
 }
 
 .register__box {
-    height: 600px;
+    height: 550px;
     background: rgba(88, 59, 95, .3);
     padding: 0px 65px;
     display: flex;
@@ -84,7 +85,7 @@ input:-webkit-autofill:focus {
     background: none;
     position: relative;
     width: 380px;
-    margin-top: 35px;
+    margin-top: 25px;
 }
 
 .register .input__box input {
@@ -134,8 +135,8 @@ input:-webkit-autofill:focus {
 .register .pass__show {
     font-size: 20px;
     position: absolute;
-    right: 10px;
-    top: 20px;
+    right: 15px;
+    top: 12px;
     z-index: 100;
     color: #fff;
     cursor: pointer;
@@ -210,6 +211,7 @@ input:-webkit-autofill:focus {
     }
     .register__box {
         width: 90vw;
+        height: 510px;
     }
     .register__inputs, .register__links, .register__button {
         width: 100%;
