--- a/src/components/UI/ProfileNav.css
+++ b/src/components/UI/ProfileNav.css
@@ -63,10 +63,10 @@ button {
 
 .profile__user {
     display: flex;
-    flex-direction: column;
+    align-items: center;
     gap: 15px;
     padding-bottom: 25px;
-    margin-bottom: 25px;
+    margin: 25px 0;
     border-bottom: 1px solid #4a3151;
 }
 
@@ -91,6 +91,10 @@ button {
     font-size: 14px;
 }
 
+.profile__name.profile__item {
+    gap: 5px;
+}
+
 .profile__balance {
     color: #f4a633;
     font-weight: 500;
@@ -102,7 +106,7 @@ button {
 }
 
 .profile__balance.profile__item {
-    gap: 12px;
+    gap: 8px;
 }
 
 .profile__content {
