--- a/src/pages/UI/LoginPage.css
+++ b/src/pages/UI/LoginPage.css
@@ -1,9 +1,12 @@
-input:-webkit-autofill, 
-input:-webkit-autofill:focus {
-    border: 10px solid #413047 !important;
-    -webkit-text-fill-color: #fff;
-    -webkit-box-shadow: 0 0 0px 1000px #413047 inset;
-    padding: 0 10px !important;
+.login .input__box input:-webkit-autofill,
+.login .input__box input:-webkit-autofill:active,
+.login .input__box input:-webkit-autofill:hover,
+.login .input__box input:-webkit-autofill:focus {
+    background-color: #413047 !important;
+    -webkit-text-fill-color: #fff !important;
+    caret-color: #fff;
+    transition: background-color 5000s ease-in-out 0s;
+    /* Установите долгую продолжительность анимации фона */
 }
 
 .login {
@@ -25,6 +28,7 @@ input:-webkit-autofill:focus {
     display: flex;
     border: 3px solid #583B5F;
     overflow: hidden;
+    transform: scale(1.1);
 }
 
 .login__img {
@@ -62,37 +66,53 @@ input:-webkit-autofill:focus {
     background: none;
     position: relative;
     width: 380px !important;
-    margin-top: 20px;
 }
 
 .login__inputs {
     margin: 15px 0;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
 }
 
 .login .input__box input {
-    height: 43px;
+    height: 50px;
     width: 100%;
     position: relative;
     z-index: 10;
     border: none;
     outline: none;
-    border-radius: 10px;
+    border-radius: 7px;
     font-size: 15px;
     color: #fff;
     padding: 0 0 0 20px;
     background: #413047;
+    border: 1px solid transparent;
+}
+
+.invalid {
+    border: 1px solid #df2020 !important;
+    padding: 0 0 0 20px !important;
+}
+
+.login .error-message {
+    color: #e73f3f;
+    margin-bottom: 5px;
+    font-size: 14px;
+    font-weight: 600;
 }
 
 .login .input__box input::placeholder {
     color: #fff;
+    font-size: 14px;
 }
 
-.pass__input-box input[type="password"] {
+.login .pass__input-box input[type="password"] {
     font-size: 25px;
     padding: 20px 15px 8px;
 }
 
-.pass__input-box .login .input__text {
+.login .pass__input-box .login .input__text {
     padding: 20px 0;
 }
 
@@ -108,24 +128,18 @@ input:-webkit-autofill:focus {
     transition: .5s;
 }
 
-.login .input__box input:valid ~ .login .input__text,
-.login .input__box input:focus ~ .login .input__text {
-    font-size: 14px;
-    transform: translateY(-34px);
-}
-
-.pass__show {
+.login .pass__show {
     font-size: 20px;
     position: absolute;
-    right: 13px;
-    top: 12.5px;
+    right: 15px;
+    top: 15.5px;
     z-index: 100;
     color: #fff;
     cursor: pointer;
     transition: .5s;
 }
 
-.bottom-border {
+.login .bottom-border {
     position: absolute;
     left: 0;
     bottom: 0;
@@ -136,11 +150,6 @@ input:-webkit-autofill:focus {
     overflow: hidden;
     transition: .5s;
     pointer-events: none;
-}
-
-.login .input__box input:valid ~ .bottom-border,
-.login .input__box input:focus ~ .bottom-border {
-    height: 40px;
 }
 
 .login__links {
@@ -201,8 +210,9 @@ input:-webkit-autofill:focus {
 
 .login__button {
     width: 100%;
+    height: 50px;
+    
     margin-top: 30px;
-    padding: 13px 0;
     background: #4f3456;
     border-radius: 10px;
     color: #fff;
@@ -211,6 +221,11 @@ input:-webkit-autofill:focus {
     font-size: 18px;
     font-weight: 700;
     text-transform: uppercase;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
     cursor: pointer;
     transition-duration: .25s;
 }
@@ -232,19 +247,45 @@ input:-webkit-autofill:focus {
 }
 
 
+.loader {
+    width: 30px;
+    height: 30px;
+    border: 5px solid #FFF;
+    border-bottom-color: transparent;
+    border-radius: 50%;
+    display: inline-block;
+    animation: rotation 1s linear infinite;
+    }
+
+    @keyframes rotation {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+    } 
+
+
 @media screen and (max-width: 1000px) {
     .login {
         padding: 50px 0;
     }
+
     .login__img {
         display: none;
     }
+
     .login__box {
         width: 90vw;
     }
-    .login__inputs, .login__links, .login__button {
+
+    .login__inputs,
+    .login__links,
+    .login__button {
         width: 100%;
     }
+
     .login .input__box {
         width: auto !important;
     }
@@ -254,13 +295,16 @@ input:-webkit-autofill:focus {
     .login {
         padding: 0;
     }
+
     .login__main-title {
         display: none;
     }
+
     .login__content {
         transform: scale(1);
         border: 0;
     }
+
     .login__box {
         width: 100vw;
         height: 100vh;
@@ -269,23 +313,25 @@ input:-webkit-autofill:focus {
         text-align: left;
         padding: 0 30px;
     }
+
     .login__inputs {
         width: 100%;
     }
-    .login .input__box {
-        margin-bottom: 30px;
-    }
+
     .login__head {
         align-items: flex-start;
         margin-top: 50px;
     }
+
     .login__links {
         width: 100%;
     }
+
     .login__button {
         margin: 35px auto;
         width: 100%;
     }
+
     .login__to-register {
         width: 100%;
         text-align: center;
@@ -298,6 +344,7 @@ input:-webkit-autofill:focus {
         font-size: 16px;
         line-height: 1.5;
     }
+
     .login__to-register a {
         text-decoration: none;
     }
