--- a/src/components/UI/ConfirmModal.css
+++ b/src/components/UI/ConfirmModal.css
@@ -6,17 +6,19 @@
     top: 0;
     z-index: 1000;
     background: rgba(0, 0, 0, .6);
+    visibility: hidden;
+    opacity: 0;
+    pointer-events: none;
     display: flex;
     justify-content: center;
     align-items: center;
-    pointer-events: none;
     transition: .2s ease-in-out;
 }
 
 .confirm.active {
     visibility: visible;
     opacity: 1;
-    pointer-events: all;
+    pointer-events: auto;
 }
 
 .confirm__wrapper.active {
